	  David Alessio (2014-2-18).
	* Other misc changes to support FPU on STM32F429 Discovery from
	  David Alession (2014-2-18)
	* stm32f429i-disco/src:  Files renamed to make more consistent
	  with current board file naming conventions (2014-2-18).
	* stm32 SPI: Disable SPI before changing CR1 register.  From David
	  Sidrane (2014-2-18).
	* stm32 TIM: Set CCMR when selecting timer channerl.  From David
	  Sidrane (2014-2-18).
	* configs/spark: Board configuration updated by David Sidrane
	  (2014-2-19).
	* libc/stdio/lib_sscanf.c:  Bug fixes from David Sidrane (2014-2-18).
	* nuttx/drivers/wireless/cc3000 and nuttx/include/nuttx/wireless/cc3000:
	  Numerous updates to the CC3000 driver from David Sidrane (2014-2-18).
	* nuttx/configs/stm3240g-eval/webserver: Converted to use the
	  kconfig-frontends tools by Alan Carvalho de Assis (2014-2-18).
	* configs/mbed:  All mbed configurations have been converted to use
	  the kconfig-frontends tools (unverified) (2014-2-18).
	* fs/fs_opendir.c, fs_readdir.c, et al: Modified so that errors
	  will not be reported if you attempt to list a empty pseudo-directory
	  (2014-2-19).
	* fs/fs_rmdir.c: 'rmdir' can now be used to remove empty directories in
	  the pseudo-filesystem such as might be left after umounting a
	  file system (2014-2-19).
	* fs/fs_mkdir.c: 'mkdir' can now be used to create empty directories in
	  the pseudo-filesystem (2014-2-19).
	* drivers/lcd/mio283qt9a.c: Bug fix from Toby Duckwork (2014-2-19).
	* fs/fs_rename.c: 'rename' can now be used to rename nodes in the
	  pseudo-filesystem (2014-2-19).
	* arch/arm/src/samd/sam_sercom.c:  Move some common SERCOM logic
	  from the USART-specific files to a share-able file where it can
	  also be used by SPI and I2C drivers (2014-2-19).
	* arch/arm/src/samd/sam_spi.c:  Add framework for a SAMD SPI driver.
	  The initial check-in is a crude port of the SAMA5 SPI driver with
	  a lot of missing logic (2014-2-19).
