@@ -6624,4 +6624,6 @@
 	* arch/arm/src/samd/sam_spi.c:  Add framework for a SAMD SPI driver.
 	  The initial check-in is a crude port of the SAMA5 SPI driver with
 	  a lot of missing logic (2014-2-19).
+	* arch/arm/src/lm/lm_lowputc.c and lm_serial.c:  Several errors
+	  are unmasked with UARTs > UART2 are enabled.  From gosha (2014-2-19).
 
